src/objects/Design_Costs_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Config_Version__c</fullName>
        <label>Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Density_High_Multiplier__c</fullName>
        <label>Density High Multiplier</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Density_Low_Multiplier__c</fullName>
        <label>Density Low Multiplier</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Density_Medium_Multiplier__c</fullName>
        <label>Density Medium Multiplier</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Fit_Out_per_sq_ft__c</fullName>
        <label>Global Fit Out per sq ft</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_ID__c</fullName>
        <externalId>true</externalId>
        <label>Load ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specification_Bespoke_Multiplier__c</fullName>
        <label>Specification Bespoke Multiplier</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specification_Classic_Multiplier__c</fullName>
        <label>Specification Classic Multiplier</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specification_Tailored_Multiplier__c</fullName>
        <label>Specification Tailored Multiplier</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Design Costs Settings</label>
</CustomObject>